Add prettier and format js/json/md files,and run format pre-commit
