# controllers/modules/adminController.js
@@ -1,7 +1,14 @@
 const httpStatus = require('http-status')
 const redisClient = require('../../config/redis')
 const { momentTW } = require('../../helpers/timeHelper')
-const { Employee, Attendance, Department, Calendar, sequelize, Sequelize } = require('../../models')
+const {
+  Employee,
+  Attendance,
+  Department,
+  Calendar,
+  sequelize,
+  Sequelize,
+} = require('../../models')
 const { or, lt, ne } = Sequelize.Op
 const defaultPassword = process.env.DEFAULT_PASSWORD
 exports.getUnworking = async function (req, res, next) {
@@ -10,26 +17,37 @@ exports.getUnworking = async function (req, res, next) {
     const dateId = JSON.parse(todayJSON).id
     const employees = await Employee.findAll({
       where: {
-        '$Attendances.id$': null
+        '$Attendances.id$': null,
       },
-      include: [{
-        model: Attendance,
-        required: false,
-        where: {
-          dateId
+      include: [
+        {
+          model: Attendance,
+          required: false,
+          where: {
+            dateId,
+          },
+          attributes: [],
         },
-        attributes: []
-      }, {
-        model: Department, attributes: []
-      }],
-      attributes: ['id', 'name', 'phone', [sequelize.col('Department.name'), 'departmentName']],
+        {
+          model: Department,
+          attributes: [],
+        },
+      ],
+      attributes: [
+        'id',
+        'name',
+        'phone',
+        [sequelize.col('Department.name'), 'departmentName'],
+      ],
 
       raw: true,
-      nest: true
+      nest: true,
     })
     const message = 'Get unworking employees successfully'
     return res.json({ message, data: employees })
-  } catch (err) { next(err) }
+  } catch (err) {
+    next(err)
+  }
 }
 exports.getLocked = async (req, res, next) => {
   try {
@@ -37,11 +55,13 @@ exports.getLocked = async (req, res, next) => {
       where: { isLocked: true },
       attributes: ['id', 'name', 'account'],
       raw: true,
-      nest: true
+      nest: true,
     })
     const message = 'Get locked users successfully'
     return res.json({ message, data: employees })
-  } catch (err) { next(err) }
+  } catch (err) {
+    next(err)
+  }
 }
 exports.unlockAccount = async function (req, res, next) {
   try {
@@ -56,7 +76,9 @@ exports.unlockAccount = async function (req, res, next) {
     const newEmployee = await employee.save()
     const message = 'update password successfully'
     return res.json({ message, data: newEmployee.toJSON() })
-  } catch (error) { next(error) }
+  } catch (error) {
+    next(error)
+  }
 }
 exports.getAbsenteeism = async (req, res, next) => {
   try {
@@ -65,49 +87,64 @@ exports.getAbsenteeism = async (req, res, next) => {
     const attendances = await Attendance.findAll({
       where: {
         dateId: {
-          [ne]: dateId
-        }
+          [ne]: dateId,
+        },
       },
       include: [
         {
           model: Employee,
-          attributes: []
-        }, {
+          attributes: [],
+        },
+        {
           model: Calendar,
-          attributes: []
-        }
+          attributes: [],
+        },
       ],
       attributes: [
-        'employeeId', 'dateId', 'punchIn', 'punchOut',
+        'employeeId',
+        'dateId',
+        'punchIn',
+        'punchOut',
         [sequelize.col('Calendar.date'), 'date'],
         [sequelize.col('Calendar.day'), 'day'],
         [sequelize.col('Employee.name'), 'name'],
         [sequelize.col('Employee.account'), 'account'],
         [sequelize.col('Attendance.id'), 'attendanceId'],
-        [sequelize.fn('TIMESTAMPDIFF', sequelize.literal('HOUR'),
-          sequelize.literal('punch_in'), sequelize.literal('punch_out')), 'diff']
+        [
+          sequelize.fn(
+            'TIMESTAMPDIFF',
+            sequelize.literal('HOUR'),
+            sequelize.literal('punch_in'),
+            sequelize.literal('punch_out')
+          ),
+          'diff',
+        ],
       ],
       having: {
         [or]: [
           {
             diff: {
-              [lt]: 8
-            }
+              [lt]: 8,
+            },
           },
-          { punchOut: null }
-        ]
+          { punchOut: null },
+        ],
       },
       raw: true,
-      nest: true
+      nest: true,
     })
     const message = 'Get error attendances successfully'
     return res.json({ message, data: attendances })
-  } catch (err) { next(err) }
+  } catch (err) {
+    next(err)
+  }
 }
 exports.modifyAttendance = async function (req, res, next) {
   try {
     const { id } = req.params
-    const attendance = await Attendance.findByPk(id, { include: { model: Calendar } })
+    const attendance = await Attendance.findByPk(id, {
+      include: { model: Calendar },
+    })
     if (!attendance) {
       const message = `Do not found attendance ${id} `
       return res.status(httpStatus.NOT_FOUND).json({ message })
@@ -120,5 +157,7 @@ exports.modifyAttendance = async function (req, res, next) {
     await attendance.save()
     const message = 'Modify attendance successfully'
     return res.json({ message })
-  } catch (err) { next(err) }
+  } catch (err) {
+    next(err)
+  }
 }
