# controllers/modules/employeeController.js
@@ -13,7 +13,7 @@ exports.updateAvatar = async (req, res, next) => {
   try {
     const { id } = req.params
     const employee = await Employee.findByPk(id, {
-      attributes: { exclude: ['password', 'createdAt', 'updatedAt'] }
+      attributes: { exclude: ['password', 'createdAt', 'updatedAt'] },
     })
     if (!employee) {
       const message = 'Do not found resource of this id'
@@ -24,7 +24,7 @@ exports.updateAvatar = async (req, res, next) => {
       Key: short.generate(),
       Body: req.file.buffer,
       ACL: 'public-read',
-      ContentType: req.file.mimetype
+      ContentType: req.file.mimetype,
     }
     s3.upload(params, async function (err, data) {
       try {
@@ -40,28 +40,40 @@ exports.updateAvatar = async (req, res, next) => {
         return res.status(httpStatus.INTERNAL_SERVER_ERROR).json({ message })
       }
     })
-  } catch (err) { next(err) }
+  } catch (err) {
+    next(err)
+  }
 }
 exports.getEmployee = async (req, res, next) => {
   try {
     const { id } = req.params
-    const employee = await Employee.findByPk(id, { attributes: { exclude: ['password', 'createdAt', 'updatedAt'] } })
+    const employee = await Employee.findByPk(id, {
+      attributes: { exclude: ['password', 'createdAt', 'updatedAt'] },
+    })
     if (!employee) {
       const message = `Do not found employee ${id}`
       return res.status(httpStatus.NOT_FOUND).json({ message })
     }
     const message = 'Get employee data successfully'
     return res.json({ message, employee: employee.toJSON() })
-  } catch (error) { next(error) }
+  } catch (error) {
+    next(error)
+  }
 }
 exports.patchEmployee = async (req, res, next) => {
   try {
     const { id } = req.params
     const { password, phone, email } = req.body
     const newData = {}
-    if (password) { newData.password = password }
-    if (phone) { newData.phone = phone }
-    if (email) { newData.email = email }
+    if (password) {
+      newData.password = password
+    }
+    if (phone) {
+      newData.phone = phone
+    }
+    if (email) {
+      newData.email = email
+    }
     const employee = await Employee.findByPk(id)
     if (!employee) {
       const message = `Do not found employee ${id}`
@@ -71,7 +83,9 @@ exports.patchEmployee = async (req, res, next) => {
     const newEmployee = await employee.save()
     const message = 'update password successfully'
     return res.json({ message, employee: newEmployee.toJSON() })
-  } catch (error) { next(error) }
+  } catch (error) {
+    next(error)
+  }
 }
 exports.getPersonalAttendances = async (req, res, next) => {
   try {
@@ -85,8 +99,8 @@ exports.getPersonalAttendances = async (req, res, next) => {
       const attendance = await Attendance.findOne({
         where: {
           employeeId,
-          dateId
-        }
+          dateId,
+        },
       })
       if (!attendance) {
         const message = 'You have not punched in yet'
@@ -96,24 +110,24 @@ exports.getPersonalAttendances = async (req, res, next) => {
       return res.json({ message, attendances: attendance.toJSON() })
     } else if (date === 'recent') {
       const recentDates = await redisClient.get('recentDates')
-      const dateIds = JSON.parse(recentDates).map(e => e.id)
+      const dateIds = JSON.parse(recentDates).map((e) => e.id)
       const attendances = await Calendar.findAll({
         where: {
           id: {
             [Op.in]: dateIds,
-            [Op.gte]: hireDateId
-          }
+            [Op.gte]: hireDateId,
+          },
         },
         include: {
           model: Attendance,
           where: { employeeId },
           required: false,
-          attributes: { exclude: ['updatedAt', 'createdAt'] }
+          attributes: { exclude: ['updatedAt', 'createdAt'] },
         },
         attributes: { exclude: ['createdAt', 'updatedAt'] },
         raw: true,
         nest: true,
-        order: [['date', 'DESC']]
+        order: [['date', 'DESC']],
       })
       const message = 'Get records success'
       return res.json({ message, attendances })
@@ -121,5 +135,7 @@ exports.getPersonalAttendances = async (req, res, next) => {
       const message = 'Bad query params'
       return res.status(httpStatus.BAD_REQUEST).json({ message })
     }
-  } catch (err) { next(err) }
+  } catch (err) {
+    next(err)
+  }
 }
